blog/resources/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: my-envoy-gateway
  labels:
    data-plane: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
