blog/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  parentRefs: [{ name: insecure-port }]
  hostnames: ['www.example.com']
  rules:
    - matches:
        - path: { type: PathPrefix, value: / }
      backendRefs:
        - { group: '', kind: Service, name: httpbin, port: 8000, weight: 1 }
